<?xml version="1.0"?>
<package format="2">
  <name>iiwa_hwextaxis</name>
  <version>1.4.0</version>
  <description>The hardware interface to an KUKA LBR IIWA Robot with an external axis</description>
  <author email="burtasun@lortek.es">Benat Urtasun</author>
  <maintainer email="burtasun@lortek.es">Benat Urtasun</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>controller_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>hardware_interface</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>iiwa_msgs</depend>
  <depend>iiwa_ros</depend>
  <depend>iiwa_hw</depend><!--interfaz de iiwa propiamente-->

  <depend>combined_robot_hw</depend>

  <!--<build_export_depend>pluginlib</build_export_depend>-->

  <export>
    <hardware_interface plugin="${prefix}/iiwa_hwextaxis_plugin.xml"/>
  </export>

</package>
